@@ -21,7 +21,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Comparator;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.stream.Stream;
@@ -37,6 +36,8 @@ import org.junit.jupiter.api.extension.BeforeAllCallback;
 import org.junit.jupiter.api.extension.BeforeEachCallback;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.ExtensionContext.Store;
+
+import static org.jboss.fuse.mvnd.junit.TestUtils.deleteDir;
 
 public class MvndTestExtension implements BeforeAllCallback, BeforeEachCallback, AfterAllCallback {
 
@@ -204,29 +205,12 @@ public class MvndTestExtension implements BeforeAllCallback, BeforeEachCallback,
             return new MvndResource(layout, registry, isNative, timeoutMs);
         }
 
-        static Path deleteDir(Path dir) {
-            if (Files.exists(dir)) {
-                try (Stream<Path> files = Files.walk(dir)) {
-                    files.sorted(Comparator.reverseOrder())
-                            .forEach(f -> {
-                                try {
-                                    Files.delete(f);
-                                } catch (IOException e) {
-                                    throw new RuntimeException("Could not delete " + f);
-                                }
-                            });
-                } catch (IOException e1) {
-                    throw new RuntimeException("Could not walk " + dir);
-                }
-            }
-            return dir;
-        }
-
         static Path createSettings(Path settingsPath) {
             final Path settingsTemplatePath = Paths.get("src/test/resources/settings-template.xml");
             try {
-                final String template = new String(Files.readAllBytes(settingsTemplatePath), StandardCharsets.UTF_8);
-                final String content = template;
+                final String template = Files.readString(settingsTemplatePath);
+                final String content = template.replaceAll("@mrm.repository.url@",
+                        Objects.requireNonNull(System.getProperty("mrm.repository.url")));
                 try {
                     Files.write(settingsPath, content.getBytes(StandardCharsets.UTF_8));
                 } catch (Exception e) {
